fix: footer link alignment on mobile view

--- a/src/components/organisms/Footer/Links.module.css
+++ b/src/components/organisms/Footer/Links.module.css
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
   gap: calc(var(--spacer) * 2);
   width: 100%;
 }
@@ -14,7 +14,7 @@
   margin-bottom: calc(var(--spacer) / 2);
   text-transform: uppercase;
   font-weight: var(--font-weight-bold);
-  color: var(--brand-grey-light);
+  color: var(--color-secondary);
 }
 
 .links {
